--- a/test.html
+++ b/test.html
@@ -32,5 +32,6 @@
   </head>
   <body>
     <div id="sankey_basic" style="width: 900px; height: 300px;"></div>
+    <a href="mqtt.html">MQTT</a>
   </body>
 </html>
