--- a/mqtt.html
+++ b/mqtt.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <button id="button">Click Me</button>
+    <div id="message"></div>
 
     <script>
       const client = mqtt.connect(
@@ -23,6 +24,7 @@
 
       client.on("message", function (topic, message) {
         console.log(topic + ": " + message.toString());
+        document.getElementById("message").innerHTML = do;cument.getElementById("demo").innerHTML + "<br>" + message.toString()
       });
 
       document.querySelector("button").addEventListener("click", function () {
