--- a/test.html
+++ b/test.html
@@ -11,12 +11,17 @@
         data.addColumn('string', 'To');
         data.addColumn('number', 'Weight');
         data.addRows([
-          [ 'A', 'X', 5 ],
-          [ 'A', 'Y', 7 ],
-          [ 'A', 'Z', 6 ],
-          [ 'B', 'X', 2 ],
-          [ 'B', 'Y', 9 ],
-          [ 'B', 'Z', 4 ]
+          [ 'R1.01', 'C1 - Réaliser', 39 ],
+          [ 'R1.01', 'C2 - Optimiser', 22 ],
+          [ 'R1.02', 'C1 - Réaliser', 11 ],
+          [ 'R1.02', 'C5 - Conduire', 11 ],
+          [ 'R1.02', 'C6 - Travailler', 10 ],
+          [ 'R1.03', 'C2 - Optimiser', 6 ],
+          [ 'R1.03', 'C2 - Administrer', 20 ],
+          [ 'R1.04', 'C2 - Administrer', 20 ],
+          [ 'R1.05', 'C4 - Gérer', 33 ],
+          [ 'R1.06', 'C2 - Optimiser', 14 ],
+          [ 'R1.06', 'C4 - Gérer', 14 ]
         ]);
 
         // Sets chart options.
