--- a/test.html
+++ b/test.html
@@ -33,7 +33,7 @@
 
         // Sets chart options.
         var options = {
-          width: 100%,
+          width: "100%",
         };
 
         // Instantiates and draws our chart, passing in some options.
