--- a/test.html
+++ b/test.html
@@ -34,6 +34,12 @@
         // Sets chart options.
         var options = {
           width: "100%",
+          colors: [
+            '#a6cee3',        // Custom color palette for sankey links.
+            '#1f78b4',        // Nodes will cycle through this palette
+            '#b2df8a',        // giving the links for that node the color.
+            '#33a02c'
+          ]
         };
 
         // Instantiates and draws our chart, passing in some options.
