--- a/mqtt.html
+++ b/mqtt.html
@@ -11,7 +11,8 @@
 
     <script>
       const client = mqtt.connect(
-        "wss://public:public@public.cloud.shiftr.io",
+        /*"wss://public:public@public.cloud.shiftr.io",*/
+        "wss://iutcv-info.cloud.shiftr.io",
         {
           clientId: "javascript",
         }
