--- a/mqtt.html
+++ b/mqtt.html
@@ -11,9 +11,9 @@
 
     <script>
       const client = mqtt.connect(
-        /*"wss://public:public@public.cloud.shiftr.io",*/
+        "wss://public:public@public.cloud.shiftr.io",
         //"wss://iutcv-info.cloud.shiftr.io",
-        "wss://but-info:2fHu1MxuCd3YLiVm@but-info.cloud.shiftr.io",
+        //"wss://but-info:2fHu1MxuCd3YLiVm@but-info.cloud.shiftr.io",
         {
           clientId: "javascript",
         }
