--- a/mqtt.html
+++ b/mqtt.html
@@ -13,7 +13,7 @@
       const client = mqtt.connect(
         //"wss://public:public@public.cloud.shiftr.io",
         //"wss://iutcv-info.cloud.shiftr.io",
-        "wss://but-info:2fHu1MxuCd3YLiVm@but-info.cloud.shiftr.io",
+        "wss://butinfo2024:ss0iZAatjvWiL6hL@butinfo2024.cloud.shiftr.io",
         {
           clientId: "javascript",
         }
