--- a/mqtt.html
+++ b/mqtt.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <button id="button">Click Me</button>
+    <iframe src="https://iutcv-info.cloud.shiftr.io/embed?widgets=1" width="600" height="400" frameborder="0" allowfullscreen></iframe>
     <div id="message"></div>
 
     <script>
