--- a/mqtt.html
+++ b/mqtt.html
@@ -14,7 +14,7 @@
       const client = mqtt.connect(
         //"wss://public:public@public.cloud.shiftr.io",
         //"wss://iutcv-info.cloud.shiftr.io",
-        "wss://iutcv-info:hRt5zgvild9eVazD@iutcv-info.cloud.shiftr.io",
+        "wss://iutcv-info:equipe1@iutcv-info.cloud.shiftr.io",
         {
           clientId: "javascript",
         }
