--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
     </script>
   </head>
   <body>
+    <h3>Essai</h3>
     <div id="sankey_basic" style="width: 900px; height: 300px;"></div>
   </body>
 </html>
