--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           [ 'C2 - Optimiser', 'R1.06', 14 ],
           [ 'C4 - Gérer', 'R1.06', 14 ],
 
-          [ 'C2 - Optimiser', 'R1.07', 14 ]
+          [ 'C2 - Optimiser', 'R1.07', 14 ],
 
           
           [ 'R1.01', 'C1 - Réaliser', 39 ],
