--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html lang="fr>
+<html lang="fr">
   <head>
     <link href="/css/styles.css" rel="stylesheet" />
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
