--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
         data.addColumn('number', 'Weight');
         data.addRows([
 
-          [ 'SAE1.01', 'C1.1', 40 ],
-          [ 'SAE1.02', 'C1.2', 40 ],
-          [ 'SAE1.03', 'C1.3', 40 ],
-          [ 'SAE1.04', 'C1.4', 40 ],
-          [ 'SAE1.05', 'C1.5', 40 ],
-          [ 'SAE1.06', 'C1.6', 40 ],
+          [ 'SAE1.01', 'C1.1 - Réaliser', 40 ],
+          [ 'SAE1.02', 'C1.2 - Optimiser', 40 ],
+          [ 'SAE1.03', 'C1.3 - Administrer', 40 ],
+          [ 'SAE1.04', 'C1.4 - Gérer', 40 ],
+          [ 'SAE1.05', 'C1.5 - Conduire', 40 ],
+          [ 'SAE1.06', 'C1.6 - Travailler', 40 ],
           
           [ 'R1.01', 'C1.1 - Réaliser', 39 ],
           [ 'R1.01', 'C1.2 - Optimiser', 22 ],
