--- a/index.html
+++ b/index.html
@@ -37,7 +37,29 @@
           [ 'R1.06', 'C1.2 - Optimiser', 14 ],
           [ 'R1.06', 'C1.4 - Gérer', 14 ],
 
-          [ 'R1.07', 'C1.2 - Optimiser', 14 ]
+          [ 'R1.07', 'C1.2 - Optimiser', 14 ],
+
+          [ 'R1.08', 'C1.5 - Conduire', 25],
+          [ 'R1.08', 'C1.6 - Travailler', 11],
+
+          [ 'R1.09', 'C1.4 - Gérer', 6],
+          [ 'R1.09', 'C1.6 - Travailler', 11],
+
+          [ 'R1.10', 'C1.1 - Réaliser', 6],
+          [ 'R1.10', 'C1.3 - Administrer', 10],
+          [ 'R1.10', 'C1.6 - Travailler', 11],
+
+          [ 'R1.11', 'C1.3 - Administrer', 6],
+          [ 'R1.11', 'C1.5 - Conduire', 14],
+          [ 'R1.11', 'C1.6 - Travailler', 11],
+
+          [ 'R1.12', 'C1.1 - Réaliser', 2],
+          [ 'R1.12', 'C1.2 - Optimiser', 2],
+          [ 'R1.12', 'C1.3 - Administrer', 2],
+          [ 'R1.12', 'C1.4 - Gérer', 2],
+          [ 'R1.12', 'C1.5 - Conduire', 2],
+          [ 'R1.12', 'C1.6 - Travailler', 2]
+          
         ]);
 
         // Sets chart options.
