--- a/index.html
+++ b/index.html
@@ -68,7 +68,9 @@
         // Sets chart options.
         var options = {
           width: "100%",
-          colors: colors,
+          node: {
+            colors: colors
+          },
           link: {
             colorMode: 'gradient',
             colors: colors
