--- a/index.html
+++ b/index.html
@@ -67,12 +67,14 @@
 
         // Sets chart options.
         var options = {
-          node: {
-            colors: colors
-          },
-          link: {
-            colorMode: 'gradient',
-            colors: colors
+          sankey: {
+            node: {
+              colors: colors
+            },
+            link: {
+              colorMode: 'gradient',
+              colors: colors
+            }
           }
         };
 
