--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
         // Sets chart options.
         var options = {
           sankey: {
+            iterations: 0,
             node: {
               colors: colors
             },
