--- a/index.html
+++ b/index.html
@@ -74,7 +74,9 @@
             },
             link: {
               colorMode: 'gradient',
-              colors: colors
+              colors: colors,
+              stroke: 'black',
+              strokeWidth: 1
             }
           }
         };
