--- a/index.html
+++ b/index.html
@@ -75,8 +75,10 @@
             link: {
               colorMode: 'gradient',
               colors: colors,
-              stroke: 'black',
-              strokeWidth: 1
+              color: {
+                stroke: 'black',
+                strokeWidth: 1
+              }
             }
           }
         };
