--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
               colorMode: 'gradient',
               colors: colors,
               color: {
-                stroke: 'black',
+                stroke: '#999999',
                 strokeWidth: 1
               }
             }
