--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     <script type="text/javascript">
       google.charts.load('current', {'packages':['sankey']});
+      google.charts.load('current', {'packages':['table']});
       google.charts.setOnLoadCallback(drawChart);
 
       function drawChart() {
@@ -86,11 +87,15 @@
         // Instantiates and draws our chart, passing in some options.
         var chart = new google.visualization.Sankey(document.getElementById('sankey_basic'));
         chart.draw(data, options);
+
+        var table = new google.visualization.Table(document.getElementById('table_div'));
+        table.draw(data, {showRowNumber: true, width: '100%', height: '100%'});
       }
     </script>
   </head>
   <body>
     <h3>Essai</h3>
     <div id="sankey_basic" style="width: 900px; height: 450px;"></div>
+    <div id="table_div"></div>
   </body>
 </html>
