--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 
       function drawChart() {
         var data = new google.visualization.DataTable();
-        data.addColumn('string', 'From');
-        data.addColumn('string', 'To');
-        data.addColumn('number', 'Weight');
+        data.addColumn('string', 'Ressource/SAE');
+        data.addColumn('string', 'Compétence');
+        data.addColumn('number', 'Coefficient');
         data.addRows([
 
           [ 'SAE1.01', 'C1.1 - Réaliser', 40 ],
