--- a/index.html
+++ b/index.html
@@ -71,8 +71,7 @@
           sankey: {
             iterations: 0,
             node: {
-              colors: colors,
-              nodePadding: 80
+              colors: colors
             },
             link: {
               colorMode: 'gradient',
