--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
           sankey: {
             iterations: 0,
             node: {
-              colors: colors
+              colors: colors,
+              interactivity: true,
             },
             link: {
               colorMode: 'gradient',
