--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
             node: {
               colors: colors,
               interactivity: true,
+              width: 20
             },
             link: {
               colorMode: 'gradient',
