--- a/index.html
+++ b/index.html
@@ -60,7 +60,14 @@
           [ 'R1.12', 'C1.3 - Administrer', 2],
           [ 'R1.12', 'C1.4 - Gérer', 2],
           [ 'R1.12', 'C1.5 - Conduire', 2],
-          [ 'R1.12', 'C1.6 - Travailler', 2]
+          [ 'R1.12', 'C1.6 - Travailler', 2],
+
+          [ 'R1.13', 'C1.1 - Réaliser', 2],
+          [ 'R1.13', 'C1.2 - Optimiser', 2],
+          [ 'R1.13', 'C1.3 - Administrer', 2],
+          [ 'R1.13', 'C1.4 - Gérer', 2],
+          [ 'R1.13', 'C1.5 - Conduire', 2],
+          [ 'R1.13', 'C1.6 - Travailler', 2]
           
         ]);
 
