--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
   </head>
   <body>
     <h3>Essai</h3>
+    <a href="https://github.com/DELECHELLE/BUT-INFO-IUTCV/blob/6396e126c5138cc3729851feef7eddfdf8da894e/BUT2/R4C12/Activit%C3%A9s/A1/Tutoriel1_Data_visualisation_cartographie.ipynb">notebook</a>
     <div id="sankey_basic" style="width: 900px; height: 450px;"></div>
     <div id="table_div"></div>
   </body>
